# daemonize

./: CMakeLists.txt
mydaemon/: daemon_main.c  mydaemon.c  mydaemon.sh  setupdaemon.sh
